// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JudicialItineraryFormComponent should render correctly 1`] = `
<app-test-host
  initialValues="null"
>
  <judicial-itinerary-form>
    <form
      class="ng-untouched ng-pristine ng-valid"
      data-test-id="judicial-itinerary-form"
      novalidate=""
      pdk-form=""
    >
      <h2
        class="govuk-heading-m"
        pdk-typography="heading-medium"
      >
        Select court and duration
      </h2>
      <pdk-grid
        class="govuk-grid-row"
        container=""
      >
        <pdk-grid
          class="govuk-grid-column-full"
          full=""
        >
          <pdk-form-field
            label="Court"
            labeltype="small"
          >
            <pdk-form-group
              class="pdk-form-group"
            >
              <label
                class="govuk-label govuk-label--s"
                for="judicialItineraryCourt"
              >
                 Court 
              </label>
              <cpp-organisation-unit-autosuggest
                class="ng-untouched ng-pristine ng-valid"
                data-role="judicial-itinerary-court-input"
                jurisdictioncode="C"
                name="courtCentre"
                required=""
              />
            </pdk-form-group>
          </pdk-form-field>
          <date-range
            class="ng-untouched ng-pristine ng-valid"
            disableweekend=""
            name="availability"
            requiredenddate=""
            requiredstartdate=""
            style="width: 100%; display: block; box-sizing: border-box;"
          >
            <div
              class="ng-untouched ng-pristine ng-invalid"
            >
              <fieldset
                class="govuk-fieldset"
                pdk-fieldset=""
              >
                <legend
                  class="govuk-fieldset__legend govuk-fieldset__legend--s govuk-visually-hidden"
                >
                   Date range 
                </legend>
                <pdk-grid
                  class="govuk-!-padding-left-0 govuk-grid-column-one-half"
                  one-half=""
                  pdk-padding-left="0"
                >
                  <pdk-form-field
                    label="Start date"
                  >
                    <pdk-form-group
                      class="pdk-form-group"
                    >
                      <fieldset
                        class="govuk-fieldset"
                        pdk-fieldset=""
                      >
                        <legend
                          class="govuk-fieldset__legend govuk-fieldset__legend--s"
                        >
                           Start date 
                        </legend>
                        <pdk-date-input
                          class="ng-untouched ng-pristine ng-invalid"
                          data-test-id="start-date"
                          formcontrolname="startDate"
                          picker=""
                          required=""
                        >
                          <pdk-interaction-container>
                            <div>
                              <div
                                class="pdk-date-input"
                              >
                                <div
                                  class="govuk-date-input ng-untouched ng-pristine ng-invalid"
                                >
                                  <div
                                    class="govuk-date-input__item"
                                  >
                                    <label
                                      class="govuk-date-input__label govuk-label"
                                      for="pdk-date-input-GENERATED_ID-day"
                                      pdk-label=""
                                    >
                                       Day 
                                    </label>
                                    <input
                                      autocomplete="off"
                                      class="govuk-date-input__input ng-untouched ng-pristine ng-invalid govuk-input govuk-input--width-2"
                                      formcontrolname="day"
                                      id="pdk-date-input-GENERATED_ID-day"
                                      name="dateDay"
                                      required=""
                                      type="number"
                                    />
                                  </div>
                                  <div
                                    class="govuk-date-input__item"
                                  >
                                    <label
                                      class="govuk-date-input__label govuk-label"
                                      for="pdk-date-input-GENERATED_ID-month"
                                      pdk-label=""
                                    >
                                       Month 
                                    </label>
                                    <input
                                      autocomplete="off"
                                      class="govuk-date-input__input ng-untouched ng-pristine ng-invalid govuk-input govuk-input--width-2"
                                      formcontrolname="month"
                                      id="pdk-date-input-GENERATED_ID-month"
                                      name="dateMonth"
                                      required=""
                                      type="number"
                                    />
                                  </div>
                                  <div
                                    class="govuk-date-input__item"
                                  >
                                    <label
                                      class="govuk-date-input__label govuk-label"
                                      for="pdk-date-input-GENERATED_ID-year"
                                      pdk-label=""
                                    >
                                       Year 
                                    </label>
                                    <input
                                      autocomplete="off"
                                      class="govuk-date-input__input ng-untouched ng-pristine ng-invalid govuk-input govuk-input--width-4"
                                      formcontrolname="year"
                                      id="pdk-date-input-GENERATED_ID-year"
                                      name="dateYear"
                                      required=""
                                      type="number"
                                    />
                                  </div>
                                </div>
                                <div
                                  class="pdk-!-negative-margin-left-2"
                                  pdk-margin-left="-2"
                                >
                                  <pdk-date-picker-toggle>
                                    <pdk-interaction-container>
                                      <div>
                                        <div
                                          aria-expanded="false"
                                          aria-label="Toggle date picker"
                                          class="pdk-date-picker__toggle"
                                          role="button"
                                          tabindex="0"
                                        >
                                          <pdk-date-picker-icon
                                            style="margin-top: -4px; display: inline-block; vertical-align: middle;"
                                          >
                                            <div
                                              style="display: flex; align-items: center; justify-content: center;"
                                            >
                                              <i
                                                style="height: 28px; width: 28px; fill: #333;"
                                              >
                                                <svg
                                                  viewBox="0 0 448 512"
                                                  xmlns="http://www.w3.org/2000/svg"
                                                >
                                                  <path
                                                    d="M148 288h-40c-6.6 0-12-5.4-12-12v-40c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12zm108-12v-40c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v40c0 6.6 5.4 12 12 12h40c6.6 0 12-5.4 12-12zm96 0v-40c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v40c0 6.6 5.4 12 12 12h40c6.6 0 12-5.4 12-12zm-96 96v-40c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v40c0 6.6 5.4 12 12 12h40c6.6 0 12-5.4 12-12zm-96 0v-40c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v40c0 6.6 5.4 12 12 12h40c6.6 0 12-5.4 12-12zm192 0v-40c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v40c0 6.6 5.4 12 12 12h40c6.6 0 12-5.4 12-12zm96-260v352c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V112c0-26.5 21.5-48 48-48h48V12c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v52h128V12c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v52h48c26.5 0 48 21.5 48 48zm-48 346V160H48v298c0 3.3 2.7 6 6 6h340c3.3 0 6-2.7 6-6z"
                                                  />
                                                </svg>
                                              </i>
                                            </div>
                                          </pdk-date-picker-icon>
                                        </div>
                                      </div>
                                    </pdk-interaction-container>
                                  </pdk-date-picker-toggle>
                                </div>
                              </div>
                            </div>
                          </pdk-interaction-container>
                        </pdk-date-input>
                      </fieldset>
                    </pdk-form-group>
                  </pdk-form-field>
                </pdk-grid>
                <pdk-grid
                  class="govuk-!-padding-left-0 govuk-grid-column-one-half"
                  one-half=""
                  pdk-padding-left="0"
                >
                  <pdk-form-field>
                    <pdk-form-group
                      class="pdk-form-group"
                    >
                      <fieldset
                        class="govuk-fieldset"
                        pdk-fieldset=""
                      >
                        <legend
                          class="govuk-fieldset__legend govuk-fieldset__legend--s"
                        >
                           End date  
                        </legend>
                        <pdk-date-input
                          class="ng-untouched ng-pristine ng-invalid"
                          data-test-id="end-date"
                          formcontrolname="endDate"
                          picker=""
                          required=""
                        >
                          <pdk-interaction-container>
                            <div>
                              <div
                                class="pdk-date-input"
                              >
                                <div
                                  class="govuk-date-input ng-untouched ng-pristine ng-invalid"
                                >
                                  <div
                                    class="govuk-date-input__item"
                                  >
                                    <label
                                      class="govuk-date-input__label govuk-label"
                                      for="pdk-date-input-GENERATED_ID-day"
                                      pdk-label=""
                                    >
                                       Day 
                                    </label>
                                    <input
                                      autocomplete="off"
                                      class="govuk-date-input__input ng-untouched ng-pristine ng-invalid govuk-input govuk-input--width-2"
                                      formcontrolname="day"
                                      id="pdk-date-input-GENERATED_ID-day"
                                      name="dateDay"
                                      required=""
                                      type="number"
                                    />
                                  </div>
                                  <div
                                    class="govuk-date-input__item"
                                  >
                                    <label
                                      class="govuk-date-input__label govuk-label"
                                      for="pdk-date-input-GENERATED_ID-month"
                                      pdk-label=""
                                    >
                                       Month 
                                    </label>
                                    <input
                                      autocomplete="off"
                                      class="govuk-date-input__input ng-untouched ng-pristine ng-invalid govuk-input govuk-input--width-2"
                                      formcontrolname="month"
                                      id="pdk-date-input-GENERATED_ID-month"
                                      name="dateMonth"
                                      required=""
                                      type="number"
                                    />
                                  </div>
                                  <div
                                    class="govuk-date-input__item"
                                  >
                                    <label
                                      class="govuk-date-input__label govuk-label"
                                      for="pdk-date-input-GENERATED_ID-year"
                                      pdk-label=""
                                    >
                                       Year 
                                    </label>
                                    <input
                                      autocomplete="off"
                                      class="govuk-date-input__input ng-untouched ng-pristine ng-invalid govuk-input govuk-input--width-4"
                                      formcontrolname="year"
                                      id="pdk-date-input-GENERATED_ID-year"
                                      name="dateYear"
                                      required=""
                                      type="number"
                                    />
                                  </div>
                                </div>
                                <div
                                  class="pdk-!-negative-margin-left-2"
                                  pdk-margin-left="-2"
                                >
                                  <pdk-date-picker-toggle>
                                    <pdk-interaction-container>
                                      <div>
                                        <div
                                          aria-expanded="false"
                                          aria-label="Toggle date picker"
                                          class="pdk-date-picker__toggle"
                                          role="button"
                                          tabindex="0"
                                        >
                                          <pdk-date-picker-icon
                                            style="margin-top: -4px; display: inline-block; vertical-align: middle;"
                                          >
                                            <div
                                              style="display: flex; align-items: center; justify-content: center;"
                                            >
                                              <i
                                                style="height: 28px; width: 28px; fill: #333;"
                                              >
                                                <svg
                                                  viewBox="0 0 448 512"
                                                  xmlns="http://www.w3.org/2000/svg"
                                                >
                                                  <path
                                                    d="M148 288h-40c-6.6 0-12-5.4-12-12v-40c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12zm108-12v-40c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v40c0 6.6 5.4 12 12 12h40c6.6 0 12-5.4 12-12zm96 0v-40c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v40c0 6.6 5.4 12 12 12h40c6.6 0 12-5.4 12-12zm-96 96v-40c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v40c0 6.6 5.4 12 12 12h40c6.6 0 12-5.4 12-12zm-96 0v-40c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v40c0 6.6 5.4 12 12 12h40c6.6 0 12-5.4 12-12zm192 0v-40c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v40c0 6.6 5.4 12 12 12h40c6.6 0 12-5.4 12-12zm96-260v352c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V112c0-26.5 21.5-48 48-48h48V12c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v52h128V12c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v52h48c26.5 0 48 21.5 48 48zm-48 346V160H48v298c0 3.3 2.7 6 6 6h340c3.3 0 6-2.7 6-6z"
                                                  />
                                                </svg>
                                              </i>
                                            </div>
                                          </pdk-date-picker-icon>
                                        </div>
                                      </div>
                                    </pdk-interaction-container>
                                  </pdk-date-picker-toggle>
                                </div>
                              </div>
                            </div>
                          </pdk-interaction-container>
                        </pdk-date-input>
                      </fieldset>
                    </pdk-form-group>
                  </pdk-form-field>
                </pdk-grid>
              </fieldset>
            </div>
          </date-range>
        </pdk-grid>
      </pdk-grid>
      <pdk-form-group
        class="govuk-!-margin-top-4 govuk-!-margin-bottom-4 pdk-form-group"
        pdk-margin-vertical="4"
      >
        <button
          class="govuk-button"
          data-test-id="view-judicial-itinerary"
          pdk-button=""
          type="submit"
        >
           View Judicial Itinerary 
        </button>
      </pdk-form-group>
    </form>
  </judicial-itinerary-form>
</app-test-host>
`;

exports[`JudicialItineraryFormComponent should update when initialValues change 1`] = `
<app-test-host
  initialValues={[Function Object]}
>
  <judicial-itinerary-form>
    <form
      class="ng-untouched ng-dirty ng-invalid"
      data-test-id="judicial-itinerary-form"
      novalidate=""
      pdk-form=""
    >
      <h2
        class="govuk-heading-m"
        pdk-typography="heading-medium"
      >
        Select court and duration
      </h2>
      <pdk-grid
        class="govuk-grid-row"
        container=""
      >
        <pdk-grid
          class="govuk-grid-column-full"
          full=""
        >
          <pdk-form-field
            label="Court"
            labeltype="small"
          >
            <pdk-form-group
              class="pdk-form-group"
            >
              <label
                class="govuk-label govuk-label--s"
                for="judicialItineraryCourt"
              >
                 Court 
              </label>
              <cpp-organisation-unit-autosuggest
                class="ng-untouched ng-pristine ng-invalid"
                data-role="judicial-itinerary-court-input"
                jurisdictioncode="C"
                name="courtCentre"
                required=""
              />
            </pdk-form-group>
          </pdk-form-field>
          <date-range
            class="ng-untouched ng-valid ng-dirty"
            disableweekend=""
            name="availability"
            requiredenddate=""
            requiredstartdate=""
            style="width: 100%; display: block; box-sizing: border-box;"
          >
            <div
              class="ng-untouched ng-pristine ng-invalid"
            >
              <fieldset
                class="govuk-fieldset"
                pdk-fieldset=""
              >
                <legend
                  class="govuk-fieldset__legend govuk-fieldset__legend--s govuk-visually-hidden"
                >
                   Date range 
                </legend>
                <pdk-grid
                  class="govuk-!-padding-left-0 govuk-grid-column-one-half"
                  one-half=""
                  pdk-padding-left="0"
                >
                  <pdk-form-field
                    label="Start date"
                  >
                    <pdk-form-group
                      class="pdk-form-group"
                    >
                      <fieldset
                        class="govuk-fieldset"
                        pdk-fieldset=""
                      >
                        <legend
                          class="govuk-fieldset__legend govuk-fieldset__legend--s"
                        >
                           Start date 
                        </legend>
                        <pdk-date-input
                          class="ng-untouched ng-pristine ng-invalid"
                          data-test-id="start-date"
                          formcontrolname="startDate"
                          picker=""
                          required=""
                        >
                          <pdk-interaction-container>
                            <div>
                              <div
                                class="pdk-date-input"
                              >
                                <div
                                  class="govuk-date-input ng-untouched ng-pristine ng-invalid"
                                >
                                  <div
                                    class="govuk-date-input__item"
                                  >
                                    <label
                                      class="govuk-date-input__label govuk-label"
                                      for="pdk-date-input-GENERATED_ID-day"
                                      pdk-label=""
                                    >
                                       Day 
                                    </label>
                                    <input
                                      autocomplete="off"
                                      class="govuk-date-input__input ng-untouched ng-pristine ng-invalid govuk-input govuk-input--width-2"
                                      formcontrolname="day"
                                      id="pdk-date-input-GENERATED_ID-day"
                                      name="dateDay"
                                      required=""
                                      type="number"
                                    />
                                  </div>
                                  <div
                                    class="govuk-date-input__item"
                                  >
                                    <label
                                      class="govuk-date-input__label govuk-label"
                                      for="pdk-date-input-GENERATED_ID-month"
                                      pdk-label=""
                                    >
                                       Month 
                                    </label>
                                    <input
                                      autocomplete="off"
                                      class="govuk-date-input__input ng-untouched ng-pristine ng-invalid govuk-input govuk-input--width-2"
                                      formcontrolname="month"
                                      id="pdk-date-input-GENERATED_ID-month"
                                      name="dateMonth"
                                      required=""
                                      type="number"
                                    />
                                  </div>
                                  <div
                                    class="govuk-date-input__item"
                                  >
                                    <label
                                      class="govuk-date-input__label govuk-label"
                                      for="pdk-date-input-GENERATED_ID-year"
                                      pdk-label=""
                                    >
                                       Year 
                                    </label>
                                    <input
                                      autocomplete="off"
                                      class="govuk-date-input__input ng-untouched ng-pristine ng-invalid govuk-input govuk-input--width-4"
                                      formcontrolname="year"
                                      id="pdk-date-input-GENERATED_ID-year"
                                      name="dateYear"
                                      required=""
                                      type="number"
                                    />
                                  </div>
                                </div>
                                <div
                                  class="pdk-!-negative-margin-left-2"
                                  pdk-margin-left="-2"
                                >
                                  <pdk-date-picker-toggle>
                                    <pdk-interaction-container>
                                      <div>
                                        <div
                                          aria-expanded="false"
                                          aria-label="Toggle date picker"
                                          class="pdk-date-picker__toggle"
                                          role="button"
                                          tabindex="0"
                                        >
                                          <pdk-date-picker-icon
                                            style="margin-top: -4px; display: inline-block; vertical-align: middle;"
                                          >
                                            <div
                                              style="display: flex; align-items: center; justify-content: center;"
                                            >
                                              <i
                                                style="height: 28px; width: 28px; fill: #333;"
                                              >
                                                <svg
                                                  viewBox="0 0 448 512"
                                                  xmlns="http://www.w3.org/2000/svg"
                                                >
                                                  <path
                                                    d="M148 288h-40c-6.6 0-12-5.4-12-12v-40c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12zm108-12v-40c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v40c0 6.6 5.4 12 12 12h40c6.6 0 12-5.4 12-12zm96 0v-40c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v40c0 6.6 5.4 12 12 12h40c6.6 0 12-5.4 12-12zm-96 96v-40c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v40c0 6.6 5.4 12 12 12h40c6.6 0 12-5.4 12-12zm-96 0v-40c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v40c0 6.6 5.4 12 12 12h40c6.6 0 12-5.4 12-12zm192 0v-40c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v40c0 6.6 5.4 12 12 12h40c6.6 0 12-5.4 12-12zm96-260v352c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V112c0-26.5 21.5-48 48-48h48V12c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v52h128V12c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v52h48c26.5 0 48 21.5 48 48zm-48 346V160H48v298c0 3.3 2.7 6 6 6h340c3.3 0 6-2.7 6-6z"
                                                  />
                                                </svg>
                                              </i>
                                            </div>
                                          </pdk-date-picker-icon>
                                        </div>
                                      </div>
                                    </pdk-interaction-container>
                                  </pdk-date-picker-toggle>
                                </div>
                              </div>
                            </div>
                          </pdk-interaction-container>
                        </pdk-date-input>
                      </fieldset>
                    </pdk-form-group>
                  </pdk-form-field>
                </pdk-grid>
                <pdk-grid
                  class="govuk-!-padding-left-0 govuk-grid-column-one-half"
                  one-half=""
                  pdk-padding-left="0"
                >
                  <pdk-form-field>
                    <pdk-form-group
                      class="pdk-form-group"
                    >
                      <fieldset
                        class="govuk-fieldset"
                        pdk-fieldset=""
                      >
                        <legend
                          class="govuk-fieldset__legend govuk-fieldset__legend--s"
                        >
                           End date  
                        </legend>
                        <pdk-date-input
                          class="ng-untouched ng-pristine ng-invalid"
                          data-test-id="end-date"
                          formcontrolname="endDate"
                          picker=""
                          required=""
                        >
                          <pdk-interaction-container>
                            <div>
                              <div
                                class="pdk-date-input"
                              >
                                <div
                                  class="govuk-date-input ng-untouched ng-pristine ng-invalid"
                                >
                                  <div
                                    class="govuk-date-input__item"
                                  >
                                    <label
                                      class="govuk-date-input__label govuk-label"
                                      for="pdk-date-input-GENERATED_ID-day"
                                      pdk-label=""
                                    >
                                       Day 
                                    </label>
                                    <input
                                      autocomplete="off"
                                      class="govuk-date-input__input ng-untouched ng-pristine ng-invalid govuk-input govuk-input--width-2"
                                      formcontrolname="day"
                                      id="pdk-date-input-GENERATED_ID-day"
                                      name="dateDay"
                                      required=""
                                      type="number"
                                    />
                                  </div>
                                  <div
                                    class="govuk-date-input__item"
                                  >
                                    <label
                                      class="govuk-date-input__label govuk-label"
                                      for="pdk-date-input-GENERATED_ID-month"
                                      pdk-label=""
                                    >
                                       Month 
                                    </label>
                                    <input
                                      autocomplete="off"
                                      class="govuk-date-input__input ng-untouched ng-pristine ng-invalid govuk-input govuk-input--width-2"
                                      formcontrolname="month"
                                      id="pdk-date-input-GENERATED_ID-month"
                                      name="dateMonth"
                                      required=""
                                      type="number"
                                    />
                                  </div>
                                  <div
                                    class="govuk-date-input__item"
                                  >
                                    <label
                                      class="govuk-date-input__label govuk-label"
                                      for="pdk-date-input-GENERATED_ID-year"
                                      pdk-label=""
                                    >
                                       Year 
                                    </label>
                                    <input
                                      autocomplete="off"
                                      class="govuk-date-input__input ng-untouched ng-pristine ng-invalid govuk-input govuk-input--width-4"
                                      formcontrolname="year"
                                      id="pdk-date-input-GENERATED_ID-year"
                                      name="dateYear"
                                      required=""
                                      type="number"
                                    />
                                  </div>
                                </div>
                                <div
                                  class="pdk-!-negative-margin-left-2"
                                  pdk-margin-left="-2"
                                >
                                  <pdk-date-picker-toggle>
                                    <pdk-interaction-container>
                                      <div>
                                        <div
                                          aria-expanded="false"
                                          aria-label="Toggle date picker"
                                          class="pdk-date-picker__toggle"
                                          role="button"
                                          tabindex="0"
                                        >
                                          <pdk-date-picker-icon
                                            style="margin-top: -4px; display: inline-block; vertical-align: middle;"
                                          >
                                            <div
                                              style="display: flex; align-items: center; justify-content: center;"
                                            >
                                              <i
                                                style="height: 28px; width: 28px; fill: #333;"
                                              >
                                                <svg
                                                  viewBox="0 0 448 512"
                                                  xmlns="http://www.w3.org/2000/svg"
                                                >
                                                  <path
                                                    d="M148 288h-40c-6.6 0-12-5.4-12-12v-40c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12zm108-12v-40c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v40c0 6.6 5.4 12 12 12h40c6.6 0 12-5.4 12-12zm96 0v-40c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v40c0 6.6 5.4 12 12 12h40c6.6 0 12-5.4 12-12zm-96 96v-40c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v40c0 6.6 5.4 12 12 12h40c6.6 0 12-5.4 12-12zm-96 0v-40c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v40c0 6.6 5.4 12 12 12h40c6.6 0 12-5.4 12-12zm192 0v-40c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v40c0 6.6 5.4 12 12 12h40c6.6 0 12-5.4 12-12zm96-260v352c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V112c0-26.5 21.5-48 48-48h48V12c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v52h128V12c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v52h48c26.5 0 48 21.5 48 48zm-48 346V160H48v298c0 3.3 2.7 6 6 6h340c3.3 0 6-2.7 6-6z"
                                                  />
                                                </svg>
                                              </i>
                                            </div>
                                          </pdk-date-picker-icon>
                                        </div>
                                      </div>
                                    </pdk-interaction-container>
                                  </pdk-date-picker-toggle>
                                </div>
                              </div>
                            </div>
                          </pdk-interaction-container>
                        </pdk-date-input>
                      </fieldset>
                    </pdk-form-group>
                  </pdk-form-field>
                </pdk-grid>
              </fieldset>
            </div>
          </date-range>
        </pdk-grid>
      </pdk-grid>
      <pdk-form-group
        class="govuk-!-margin-top-4 govuk-!-margin-bottom-4 pdk-form-group"
        pdk-margin-vertical="4"
      >
        <button
          class="govuk-button"
          data-test-id="view-judicial-itinerary"
          pdk-button=""
          type="submit"
        >
           View Judicial Itinerary 
        </button>
      </pdk-form-group>
    </form>
  </judicial-itinerary-form>
</app-test-host>
`;
